<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView">

            <TextView
                android:id="@+id/title_edit_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Barcode Scanning"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="217dp"
        android:text="Scan or insert a picture of Barcode"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_constraint_layout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_camera"
            android:layout_width="293dp"
            android:layout_height="45dp"
            android:layout_marginBottom="54dp"
            android:text="Open Camera"
            app:layout_constraintBottom_toTopOf="@+id/button_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_gallery"
            android:layout_width="293dp"
            android:layout_height="45dp"
            android:layout_marginBottom="357dp"
            android:text="Pick From Gallery"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>