...
        android:icon="@drawable/list"/>
    <item
        android:id="@+id/expenses"
        android:title=""
        android:icon="@drawable/expenses"/>
    <item
        android:id="@+id/scan"
        android:title=""
        android:icon="@drawable/camera"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile_icon"
        android:title="">
...
